[metadata]
name = checkmate
version = 1.0.1
author = Austin Mordahl

[options]
python_requires = >=3.10
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    checkmate = src.checkmate.dispatcher.Dispatcher:main
    tester = src.checkmate.fuzzing.tooltester:main
    deltadebug = src.checkmate.debugging.DeltaDebugger:main