[metadata]
name = ECSTATIC
version = 0.0.1-alpha
author = Austin Mordahl

[options]
python_requires = >=3.10
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    dispatcher = src.ecstatic.dispatcher.Dispatcher:main
    tester = src.ecstatic.Tester:main
    deltadebugger = src.ecstatic.debugging.JSBenchmarkDeltaDebugger:main